Fixing transition jump.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,7 @@ a.skip-main:focus, a.skip-main:active {
   }
 .easeInOut-enter, .easeInOut-leave-to  {
     opacity: 0;
+    height: 0;
 }
 section.generic-page {
     background: #ffffff;
